--- a/templates/trade.html
+++ b/templates/trade.html
@@ -1,7 +1,27 @@
 <html>
+<link rel="stylesheet" href="static/trade.css">
 <head>
 	<title>trade</title>
+	<h1>Claudius</h1>
 </head>
 <body>
+	<div class="cards">
+		{% for card in cards %}
+		<div class="card">
+			<div class="card_top">
+				<a href="" class="card_image">
+					<img src="{{ src }}" alt=""></img>
+				</a>
+			</div>
+			<div class="card_botom">
+				<div class="card_price">1000</div>
+				<a href="" class="card_title">
+					Купон
+				</a>
+				<button class="card_trade">Обменять</button>
+			</div>
+		</div>
+		{% endfor %}
+	</div>
 </body>
 </html>
