--- a/templates/trade.html
+++ b/templates/trade.html
@@ -1,8 +1,14 @@
 <html>
 <link rel="stylesheet" href="static/trade.css">
 <head>
-	<title>trade</title>
-	<h1>Claudius</h1>
+	<div class="header">
+		<title>trade</title>
+		<div class="title">
+			<h1>Claudius</h1>
+		</div>
+		<div class="call">Контакты</div>
+		<div class="login">Вход</div>
+	</div>
 </head>
 <body>
 	<div class="cards">
